# cmdvault

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cmdvault/: __init__.py  cli.py  runner.py  search.py  store.py
docs/: ARCHITECTURE.md  EXAMPLES.md  USAGE.md
tests/: test_runner.py  test_search.py  test_store.py
