[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cmdvault"
version = "0.1.0"
description = "Save, search, and run your terminal commands from a personal vault"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Bennett" }]
keywords = ["cli", "commands", "snippets", "terminal", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
cmdvault = "cmdvault.cli:cli"

[project.urls]
Homepage = "https://github.com/bennett/cmdvault"
Repository = "https://github.com/bennett/cmdvault"

[tool.pytest.ini_options]
testpaths = ["tests"]
